Beginnings of next/prev

--- a/client/besterday.html
+++ b/client/besterday.html
@@ -24,6 +24,8 @@
       <a class="controls-menu" href="#"><span class="controls-menu-date">{{date}}</span></a>
       <a class="controls-save" href="#">Update</a>
       <a class="controls-share" href="#">Locked</a>
+      <a class="controls-up" href="#">Previous</a>
+      <a class="controls-dn" href="#">Next</a>
     </div>
 
   </div>
