Firefox bug fixing/performance issues.

--- a/client/besterday.html
+++ b/client/besterday.html
@@ -5,7 +5,7 @@
 </head>
  
 <body>
-  <div class="bg-image"></div>
+  <div class="bg"><div class="bg-image"></div></div>
   <div class="dummy"></div>  
   {{> page}}
 
