--- a/client/besterday.html
+++ b/client/besterday.html
@@ -40,7 +40,7 @@
     <div class="controls">
       <a class="controls-menu" href="#"><span class="controls-menu-date">{{date}}</span></a>
       <a class="controls-save" href="#">Update</a>
-      <a class="controls-share" href="#">Locked</a>
+      <a class="controls-share" href="#"><div class="controls-share-icon">Locked</div></a>
     </div>
 
 
