--- a/client/index.html
+++ b/client/index.html
@@ -7,18 +7,58 @@
 <body>
   
   <div class="bg"><div class="bg-image"></div></div>
-  
-  {{renderPage}}
-
-  {{#if showSidebar}}
-    {{> sidebar}}
-  {{/if}}
-
-  {{loginButtons  align="right"}}
+  {{> page }}
 
 </body>
 
+<template name="page">
+  
+  {{renderPage}}
+
+  <div id="sidebar">
+    {{#if showSidebar}}
+      {{> sidebar}}
+    {{/if}}
+  </div>
+
+  {{loginButtons  align="right"}}
+</template>
 
 <template name="sidebar">
-  <h3>Sidebar</h3>
+  <ul class="sidebar-menu">
+    <li class="sidebar-menu-sub list">
+      <input type="radio" id="list" name="sidebar-menu-sub" checked>
+      <label for="list">List</label>
+      <ul class="content">
+        <li class="sidebar-menu-sub-list-week prev"> <a href="#">Previous Week</a>
+        </li>
+        <li class="sidebar-menu-sub-list-week this"> <a href="#">Current Week</a>
+          <ul>
+            {{#each weekThis}}
+            <li><a href="#" data-date="{{date}}" class="{{#if disabled}}disabled{{/if}} {{#if text}}story{{/if}} {{#if active}}active{{/if}}">{{prettyDate}}{{#if img}}<div class="hasImg {{#if active}}active{{/if}}"></div>{{/if}}</a></li>
+            {{/each}}
+          </ul>
+        </li>
+        <li class="sidebar-menu-sub-list-week next"> <a href="#">Next Week</a>
+        </li>
+      </ul>
+    </li>
+    <li class="sidebar-menu-sub profile">
+      <input type="radio" id="profile" name="sidebar-menu-sub">
+      <label for="profile">Profile</label>
+      <ul class="content">
+
+          <li><a href="#">Edit Profile</a></li>
+          <li><a href="#">Edit Password</a></li>
+          <li><a href="#">Sharing Settings</a></li>
+
+      </ul>
+    </li>
+    <li class="sidebar-menu-sub signout">
+      <input type="radio" id="signout" name="sidebar-menu-sub">
+      <label for="signout">Sign Out</label>
+      <ul class="content">
+        <li>Goodbye!</li>
+      </ul>
+    </li>
 </template>
