--- a/client/index.html
+++ b/client/index.html
@@ -30,16 +30,12 @@
       <input type="radio" id="list" name="sidebar-menu-sub" checked>
       <label for="list">List</label>
       <ul class="content">
-        <li class="sidebar-menu-sub-list-week prev"> <a href="#">Previous Week</a>
-        </li>
-        <li class="sidebar-menu-sub-list-week this"> <a href="#">Current Week</a>
+        <li class="sidebar-menu-sub-list-week this"> <a href="#">{{month}} {{year}}</a>
           <ul>
             {{#each weekThis}}
-            <li><a href="#" data-date="{{date}}" class="{{#if disabled}}disabled{{/if}} {{#if text}}story{{/if}} {{#if active}}active{{/if}}">{{day}}{{#if img}}<div class="hasImg {{#if active}}active{{/if}}"></div>{{/if}}</a></li>
+            <li><a href="{{dateUrl}}" data-date="{{date}}" class="{{#if disabled}}disabled{{/if}} {{#if text}}story{{/if}} {{#if active}}active{{/if}}">{{day}}{{#if img}}<div class="hasImg {{#if active}}active{{/if}}"></div>{{/if}}</a></li>
             {{/each}}
           </ul>
-        </li>
-        <li class="sidebar-menu-sub-list-week next"> <a href="#">Next Week</a>
         </li>
       </ul>
     </li>
