Login flow changes + toggle function for loading

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,9 @@
     {{/if}}
   </div>
 
-  {{loginButtons  align="right"}}
+  {{#unless loggedIn}}
+    {{loginButtons  align="right"}}
+  {{/unless}}
 </template>
 
 <template name="sidebar">
