--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,8 @@
     <title>Besterday</title>
     <script type="text/javascript" src="//use.typekit.net/gtr3ign.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+    <meta property="fb:app_id" content="590307137670569" /> 
 </head>
 
 <body>
