--- a/client/index.html
+++ b/client/index.html
@@ -65,21 +65,26 @@
 </template>
 
 <template name="loginForm">
-  <form id="login-form" action="action">
-    <div>
-      <input type="email" id="login-email" placeholder="Email" />
-      <input type="password" id="login-password" placeholder="Password" />
-      <input type="submit" id="login-button" value="Sign in" />
-   </div>
+<div id="login">
+  <form id="login-form" action="action" class="pure-form pure-form-stacked">
+    <legend>Login</legend>
+    <fieldset class="pure-group">
+      <input type="text" id="login-username" placeholder="Username" required/>
+      <input type="password" id="login-password" placeholder="Password" required/>
+      <button type="submit" id="login-button" class="pure-button pure-button-primary">Sign in</button>
+   </fieldset>
  </form> 
 
- <form id="register-form" action="action">
-  <div>
-   <input type="email" id="account-email"  placeholder="Email" />
-   <input type="password" id="account-password"  placeholder="Password" />
-   <input type="submit" id="create-account" value="Create an Account" />
- </div>
-</form>
 
+  <form id="account-form" action="action" class="pure-form pure-form-stacked">
+    <legend>Create an Account</legend>
+      <fieldset class="pure-group">
+        <input type="text" id="account-username"  placeholder="Username" required/>
+        <input type="email" id="account-email"  placeholder="Email" required/>
+        <input type="password" id="account-password"  placeholder="Password" required/>
+        <button type="submit" id="account-button" class="pure-button pure-button-primary">Create Account</button>
+     </fieldset>
+  </form>
+</div>
 
 </template>
