--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,9 @@
     <script type="text/javascript" src="//use.typekit.net/gtr3ign.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
+    <meta name = "viewport" content = "initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
     <meta property="fb:app_id" content="590307137670569" /> 
 </head>
 
