Big changes here. Separating UI layer and functionality layer.

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,10 @@
 
 <template name="page">
   
+  {{#if loading}}
+    <div class="loading">Loading&hellip;</div>
+  {{/if}}
+
   {{renderPage}}
 
   {{#unless loggedIn}}
