--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <meta property="fb:app_id" content="590307137670569" /> 
+    
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 </head>
 
 <body>
